:lipstick: Fix wrong width by adding flex on network icon

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -11,7 +11,7 @@
 }
 
 .networkButton {
-  @apply bg-gray-600 opacity-50 p-2 text-2xl rounded-full m-3;
+  @apply bg-gray-600 opacity-50 p-2 text-2xl rounded-full m-3 flex;
 }
 
 .networkButton:hover {
